fix transparent bg for light high contrast

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
     --bg-shade-bold: #14142b;
     --bg-mid: #1f1f3d;
     --bg-mid-bold: #2d2d52;
-    --bg-transparent-dark: #222b;
+    --bg-transparent-dark: #0005;
     --text-primary: #ffffff;
     --text-secondary: #d1d5db;
     --text-disabled: #a1a1aa;
